[package]
name = "boxes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy        = { version = "0.16", features = ["dynamic_linking"] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", package = "bevy_renet", default-features = false, features = ["netcode"] }
serde       = { version = "1.0", features = ["derive"] }
bincode     = "1.3"